--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -4,7 +4,7 @@
     τ
   </div>
 
-  <div class="pl-2" style="padding-top: .404em;">
+  <div class="pl-2 copyright">
     <p>©2019 - Built by Jon Tow with Jekyll
   </div>
 </footer>
