--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -12,7 +12,7 @@
 
     <!-- Bio Row -->
     <p style="text-align: justify;">
-      <b>CS @ Stony Brook University</b>
+      <span style="color: var(--light-black)">CS @ Stony Brook University</span>
       <br>
       <br>
       Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, not like the tow &#128666). I enjoy coding, tinkering with
@@ -21,26 +21,23 @@
       <br>
     </p>
     <!-- End of Bio Row -->
-    
+
     <p>
       I also take up some server space over in these parts:
 
-      <ul style="list-style: none; margin: 0em;">
+      <ul class="social-media-list">
 	<li style="padding-bottom: .325em;">
-	  &#128049;
-	  <a class="pl-1" href="https://github.com/jon-tow">   
+	  <a class="" href="https://github.com/jon-tow">
 	    github
 	  </a>
 	</li>
 	<li style="padding-bottom: .325em;">
-	  &#128038;
-	  <a class="pl-1" href="https://twitter.com/jonbtow">
+	  <a class="" href="https://twitter.com/jonbtow">
 	    twitter
 	  </a>
 	</li>
 	<li>
-	  &#128231;
-	  <a class="pl-1" href="jonathantow1@gmail.com">
+	  <a class="" href="jonathantow1@gmail.com">
 	    jonathantow1 @ gmail
 	  </a>
 	</li>
