--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,18 +1,34 @@
-.highlight{
-    padding: .5em;    
-}
-.highlight table td {
-  
-    padding: 5px;
-}
 .highlight table {
-  
-    padding: 10em;
+
 }
 
-.highlight table pre {  
-    margin: 0; 
+.highlight table td {
+
 }
+
+
+.highlight table pre {
+
+}
+
+.highlight {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+}
+
+.highlight pre {
+    border: 1px solid #f4f4f8;
+    background-color: #F4F4F9;
+    border-radius: 3px;
+    font-size: 12px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    -webkit-box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5);
+    -moz-box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5);
+    box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5);
+}
+
 .highlight .cm {
     color: #999988;
     font-style: italic;
@@ -216,9 +232,4 @@
 }
 .highlight .w {
     color: #bbbbbb;
-}
-.highlight {
-    background-color: #F4F4F9;
-    border-radius: 4px;
-    margin: .2em 0 1em 0;
 }
