--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -15,7 +15,7 @@
       <span style="color: var(--light-black)">CS @ Stony Brook University</span>
       <br>
       <br>
-      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, not like the tow &#128666). I enjoy coding, tinkering with
+      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, not like tow-truck). I enjoy coding, tinkering with
       machine learning models,
       and competing in amateur sporting events.
       <br>
@@ -26,21 +26,21 @@
       I also take up some server space over in these parts:
 
       <ul class="social-media-list">
-	<li style="padding-bottom: .325em;">
-	  <a class="" href="https://github.com/jon-tow">
-	    github
-	  </a>
-	</li>
-	<li style="padding-bottom: .325em;">
-	  <a class="" href="https://twitter.com/jonbtow">
-	    twitter
-	  </a>
-	</li>
-	<li>
-	  <a class="" href="jonathantow1@gmail.com">
-	    jonathantow1 @ gmail
-	  </a>
-	</li>
+        <li style="padding-bottom: .325em;">
+          <a class="" href="https://github.com/jon-tow">
+            github
+          </a>
+        </li>
+        <li style="padding-bottom: .325em;">
+          <a class="" href="https://twitter.com/jonbtow">
+            twitter
+          </a>
+        </li>
+        <li>
+          <a class="" href="jonathantow1@gmail.com">
+            jonathantow1 @ gmail
+          </a>
+        </li>
       </ul>
     </p>
   </div>
