Hold off on adding notes

--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -15,8 +15,8 @@
       <span style="color: var(--light-black)">CS @ Stony Brook University</span>
       <br>
       <br>
-      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, not like tow-truck). I enjoy coding, tinkering with
-      machine learning models,
+      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, 
+      not like tow-truck &#128513;). I enjoy coding, tinkering with machine learning models,
       and competing in amateur sporting events.
       <br>
     </p>
@@ -38,7 +38,7 @@
         </li>
         <li>
           <a class="" href="jonathantow1@gmail.com">
-            jonathantow1 @ gmail
+            jonathantow1 at gmail
           </a>
         </li>
       </ul>
