--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -9,9 +9,10 @@
     </div>
   </div>
 
-  <div class="section-content" style="">
+  <div class="section-content">
     <ul class="entry-previews" >
-      <!-- Under construction. Coming soon. -->
+      Under construction. Coming soon!
+      <!--
       {% for post in site.posts %}
       <li class="pb-3">
       	<p class="post-preview">
@@ -26,7 +27,7 @@
       	  {{ post.introduction }}
       	</p>
       </li>
-      {% endfor %}
+      {% endfor %} -->
     </ul>
   </div>
 </section>
