--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,6 +1,4 @@
 <section id="about">
-
-  <!-- Section Title Row -->
   <div class="section-header">
     <h1 class="section-h2">
       <p>About</p>
@@ -15,7 +13,7 @@
       <span style="color: var(--light-black)">CS @ Stony Brook University</span>
       <br>
       <br>
-      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, 
+      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ,
       not like tow-truck &#128513;). I enjoy coding, tinkering with machine learning models,
       and competing in amateur sporting events.
       <br>
@@ -28,22 +26,21 @@
       <ul class="social-media-list">
         <li style="padding-bottom: .325em;">
           <a class="" href="https://github.com/jon-tow">
-            github
+            <span class="about-nav">github</span>
           </a>
         </li>
         <li style="padding-bottom: .325em;">
           <a class="" href="https://twitter.com/jonbtow">
-            twitter
+            <span class="about-nav">twitter</span>
           </a>
         </li>
         <li>
           <a class="" href="jonathantow1@gmail.com">
-            jonathantow1 at gmail
+            <span class="about-nav">jonathantow1 at gmail</span>
           </a>
         </li>
       </ul>
     </p>
   </div>
 
-  <!-- End of Content -->
 </section>
