--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,33 +1,28 @@
 <section id="notes">
-  <!-- Section Title Row -->
   <div class="section-header">
-    <h1 class="section-h2">
-      <p>Notes</p>
-    </h1>
-    <div class="top-link ">
-      <a href="#nav"> Back to top </a>
+    <h1 class="section-h2"><p>Notes</p></h1>
+    <div class="top-link mb-1">
+      <a href="{{sit.url}}/tags"> <span class="notes-nav">Tags </a>
     </div>
   </div>
 
   <div class="section-content">
-    <ul class="entry-previews" >
-      Under construction. Coming soon!
-      <!--
+    <ul class="entry-previews">
       {% for post in site.posts %}
       <li class="pb-3">
-      	<p class="post-preview">
-      	  <span style="font-size: .95em; color: var(--light-black)">
-  	    {{post.date | date: '%B %d, %Y'}}
-      	  </span>
-      	  <br>
-      	  <a href="{{ post.url }}" style="font-size: 1.15em;">
-      	    {{ post.title }}
-      	  </a>
-      	  <br>
-      	  {{ post.introduction }}
-      	</p>
+        <p class="post-preview">
+          <span style="font-size: 0.95em; color: var(--light-black);">
+            {{post.date | date: '%B %d, %Y'}}
+          </span>
+          <br />
+          <a href="{{ post.url }}" style="font-size: 1.15em;">
+            <span class="notes-nav">{{ post.title }}</span>
+          </a>
+          <br />
+          {{ post.introduction }}
+        </p>
       </li>
-      {% endfor %} -->
+      {% endfor %}
     </ul>
   </div>
 </section>
