--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,98 +1,91 @@
 <section id="project">
+  <div class="section-header">
+    <h1 class="section-h2">
+      <p>Projects</p>
+    </h1>
+  </div>
 
-    <!-- Section Title Row -->
-    <div class="section-header">
-      <h1 class="section-h2">
-        <p>Projects</p>
-      </h1>
+  <div class="section-content">
+    <div class="project-type mb-2 pt-0">
+      <h3>Language</h3>
+    </div>
+    <div class="project-row row pl-0">
+      <div class="project-item col-sm">
+        <h4>
+          <a href="https://github.com/jon-tow/lispp">
+            <span class="projects-nav">Lispp</span>
+          </a>
+        </h4>
+        <p>
+          A little LISP interpreter built with Modern C++.
+          <br />
+          <a
+            class="github-link third-color"
+            href="https://github.com/jon-tow/lispp">
+            <span class="minor-nav">github</span>
+          </a>
+        </p>
+      </div>
+      <div class="project-item col-sm"></div>
     </div>
 
-    <div class="section-content">
-
-      <!-- LANGUAGE -->
-      <div class="project-type mb-2 pt-0">
-        <h3>Language</h3>
+    <div class="project-type mb-2 pt-2">
+      <h3>Playground</h3>
+    </div>
+    <div class="project-row row pl-0">
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/impossible-tic-tac-toe/index.html">
+            <span class="projects-nav">Impossible Tic-Tac-Toe</span>
+          </a>
+        </h4>
+        <p>
+          A minimax implementation for deciding the best moves in a tic-tac-toe
+          game.
+          <br />
+          <a
+            class="github-link third-color"
+            href="https://github.com/jon-tow/impossible-tic-tac-toe">
+            <span class="minor-nav">github</span>
+          </a>
+        </p>
       </div>
-      <!-- Note Projects Row -->
-      <div class="project-row row pl-0">
-        <!-- Column Content -->
-        <div class="project-item col-sm">
-          <h4>
-            <a class="project-name" href="https://github.com/jon-tow/lispp">
-              Lispp
-            </a>
-          </h4>
-          <p>
-            A little LISP interpreter built
-            with Modern C++.
-            <br>
-            <a class="github-link third-color"
-	       href="https://github.com/jon-tow/lispp">github</a>
-          </p>
-        </div>
-        <div class="project-item col-sm">
-        </div>
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/sudoku-solver/index.html">
+            <span class="projects-nav">Sudoku Solver</span>
+          </a>
+        </h4>
+        <p>
+          A sudoku solver implemented with backtracking.
+          <br />
+          <a
+            class="github-link third-color"
+            href="https://github.com/jon-tow/sudoku-solver">
+            <span class="minor-nav">github</span>
+          </a>
+        </p>
       </div>
-      <!-- End of Projects Row -->
-
-      <!-- PLAYGROUND -->
-      <div class="project-type mb-2 pt-2">
-        <h3>Playground</h3>
-      </div>
-
-      <!-- Note Projects Row -->
-      <div class="project-row row pl-0">
-        <!-- Column Content -->
-        <div class="project-item col-sm">
-          <h4>
-            <a href="projects/impossible-tic-tac-toe/index.html">
-              Impossible Tic-Tac-Toe
-            </a>
-          </h4>
-          <p>
-            A minimax implementation for deciding the best moves in a tic-tac-toe game.
-            <br />
-            <a class="github-link third-color"
-	       href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>
-          </p>
-        </div>
-
-        <div class="project-item col-sm">
-          <h4>
-            <a href="projects/sudoku-solver/index.html">
-              Sudoku Solver
-            </a>
-          </h4>
-          <p>
-            A sudoku solver implemented with backtracking.
-            <br />
-            <a class="github-link third-color"
-	       href="https://github.com/jon-tow/sudoku-solver">github</a>
-          </p>
-        </div>
-      </div>
-      <!-- End of Projects Row -->
-
-      <!-- Note Projects Row -->
-      <div class="project-row row pl-0">
-        <!-- Column Content -->
-        <div class="project-item col-sm">
-          <h4>
-            <a href="projects/maze-solver/index.html">
-              Maze Solver
-            </a>
-          </h4>
-          <p>
-            A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
-            <a class="github-link third-color"
-	       href="https://github.com/jon-tow/maze-solver">github</a>
-          </p>
-        </div>
-        <div class="project-item col-sm">
-        </div>
-      </div>
-      <!-- End of Projects Row -->
     </div>
 
-    <!-- End of Content -->
-  </section>
+    <div class="project-row row pl-0">
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/maze-solver/index.html">
+            <span class="projects-nav">Maze Solver</span>
+          </a>
+        </h4>
+        <p>
+          A visualization of the basic uninformed search algorithms, depth-first
+          and breadth-first. <br />
+          <a
+            class="github-link third-color"
+            href="https://github.com/jon-tow/maze-solver">
+            <span class="minor-nav">github</span>
+          </a>
+        </p>
+      </div>
+      <div class="project-item col-sm"></div>
+    </div>
+  </div>
+</section>
