Add volunteer work :shrug:

--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -6,28 +6,6 @@
   </div>
 
   <div class="section-content">
-    <div class="project-type mb-2 pt-0">
-      <h3>Language</h3>
-    </div>
-    <div class="project-row row pl-0">
-      <div class="project-item col-sm">
-        <h4>
-          <a href="https://github.com/jon-tow/lispp">
-            <span class="projects-nav">Lispp</span>
-          </a>
-        </h4>
-        <p>
-          A little LISP interpreter built with Modern C++.
-          <br />
-          <a
-            class="github-link third-color"
-            href="https://github.com/jon-tow/lispp">
-            <span class="minor-nav">github</span>
-          </a>
-        </p>
-      </div>
-      <div class="project-item col-sm"></div>
-    </div>
 
     <div class="project-type mb-2 pt-2">
       <h3>Playground</h3>
@@ -43,9 +21,7 @@
           A minimax implementation for deciding the best moves in a tic-tac-toe
           game.
           <br />
-          <a
-            class="github-link third-color"
-            href="https://github.com/jon-tow/impossible-tic-tac-toe">
+          <a class="github-link third-color" href="https://github.com/jon-tow/impossible-tic-tac-toe">
             <span class="minor-nav">github</span>
           </a>
         </p>
@@ -59,15 +35,12 @@
         <p>
           A sudoku solver implemented with backtracking.
           <br />
-          <a
-            class="github-link third-color"
-            href="https://github.com/jon-tow/sudoku-solver">
+          <a class="github-link third-color" href="https://github.com/jon-tow/sudoku-solver">
             <span class="minor-nav">github</span>
           </a>
         </p>
       </div>
     </div>
-
     <div class="project-row row pl-0">
       <div class="project-item col-sm">
         <h4>
@@ -78,14 +51,48 @@
         <p>
           A visualization of the basic uninformed search algorithms, depth-first
           and breadth-first. <br />
-          <a
-            class="github-link third-color"
-            href="https://github.com/jon-tow/maze-solver">
+          <a class="github-link third-color" href="https://github.com/jon-tow/maze-solver">
             <span class="minor-nav">github</span>
           </a>
         </p>
       </div>
       <div class="project-item col-sm"></div>
     </div>
+
+    <div class="project-type mb-2 pt-0">
+      <h3>Language</h3>
+    </div>
+    <div class="project-row row pl-0">
+      <div class="project-item col-sm">
+        <h4>
+          <a href="https://github.com/jon-tow/lispp">
+            <span class="projects-nav">Lispp</span>
+          </a>
+        </h4>
+        <p>
+          A little LISP interpreter built with Modern C++.
+          <br />
+          <a class="github-link third-color" href="https://github.com/jon-tow/lispp">
+            <span class="minor-nav">github</span>
+          </a>
+        </p>
+      </div>
+      <div class="project-item col-sm"></div>
+    </div>
+
+    <div class="project-type mb-2 pt-0">
+      <h3>Volunteer/Community</h3>
+    </div>
+    <div class="project-row row pl-0">
+      <div class="project-item col-sm">
+        <h4>
+          <a href="https://icml.cc/">
+            <span class="projects-nav">ICML 2020</span>
+          </a>
+        </h4>
+      </div>
+      <div class="project-item col-sm"></div>
+    </div>
+
   </div>
 </section>
