--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -5,6 +5,6 @@
   </div>
 
   <div class="pl-2 copyright">
-    <p>©2019 - Built by Jon Tow with Jekyll
-  </div>
+    <p>©2021 - Built by Jon Tow with Jekyll
+  </div
 </footer>
